--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -137,7 +137,114 @@ header .picture .one p {
 
 
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+
+/* Smartphone (Nexus 4) */
+@media screen and (device-width : 384px) and (device-height : 640px) and (-webkit-device-pixel-ratio : 2) and (orientation : portrait){
+  header {
+    position: relative;
+    min-height: 640px;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    background-image: url('../assets/cell-image1.jpg');
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+}
+
+@media screen and (device-width: 640px) and (device-height : 384px) and (-webkit-device-pixel-ratio : 2) and (orientation : landscape){
+  header {
+    position: relative;
+    min-height: 384px;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    background-image: url('../assets/full-image1.jpg');
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+.fancy{
+	margin-top: 100px;
+	font-size: 3em;
+}
+
+.smaller {
+	text-transform: none;
+	padding-bottom: 20%;
+
+}
+}
+
+/* Smartphone (Nexus 5) */
+@media screen and (device-width : 360px) and (device-height : 640px) and (-webkit-device-pixel-ratio : 2) and (orientation : portrait)  {
+  header {
+    position: relative;
+    min-height: 640px;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    background-image: url('../assets/cell-image1.jpg');
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+}
+
+@media screen and (device-width : 360px) and (device-height : 640px) {
+  header {
+    position: relative;
+    min-height: 384px;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    background-image: url('../assets/cell-image1.jpg');
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+.fancy {
+	font-family: "Montez";
+	text-transform: none;
+	font-size: 2.5em;
+	padding-top: 150px;
+}
+.fancy{
+	margin-top: -150px;
+}
+
+.smaller {
+	text-transform: none;
+	padding-bottom: 70%;
+
+}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+
+/*@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
   header {
     position: relative;
     min-height: 480px;
@@ -151,28 +258,13 @@ header .picture .one p {
     background-size: cover;
     -o-background-size: cover;
 }
-}
-/* Smartphone (Nexus 4) */
-@media only screen and (min-width : 384px) and (max-width : 384px) {
+}*/
+
+/* Smartphone (Galaxy Note II) */
+/*@media screen and (device-width : 360px) and (device-height : 640px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait) {
   header {
     position: relative;
     min-height: 640px;
-    text-align: center;
-    color: #fff;
-    width: 100%;
-    background-image: url('../assets/cell-image1.jpg');
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-}
-
-/*@media only screen and (min-width: 640px) and (max-width : 640px) {
-  header {
-    position: relative;
-    min-height: 384px;
     text-align: center;
     color: #fff;
     width: 100%;
@@ -183,22 +275,44 @@ header .picture .one p {
     background-size: cover;
     -o-background-size: cover;
 }
-.fancy{
-	margin-top: -500px;
-}
-
-.smaller {
+.fancy {
+	font-family: "Montez";
 	text-transform: none;
-	padding-bottom: 50%;
-
+	font-size: 2em;
 }
-}*/
+.smaller{
+	font-size: 1.05em;
+}
+}
 
-/* Smartphone (Nexus 5) */
-@media only screen and (min-width : 384px) and (max-width : 384px) {
+@media screen and (device-height : 360px) and (device-width : 640px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape) {
   header {
     position: relative;
-    min-height: 640px;
+    min-height: 360px;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    background-image: url('../assets/cell-image2.jpg');
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+.fancy {
+	font-family: "Montez";
+	text-transform: none;
+	font-size: 2em;
+}
+.smaller{
+	font-size: 1.05em;
+}*/
+
+/* Smartphone (iPhone 4) 
+@media only screen and (min-width : 320px) and (max-width : 320px) {
+/*  header {
+    position: relative;
+    min-height: 732px;
     text-align: center;
     color: #fff;
     width: 100%;
@@ -208,13 +322,13 @@ header .picture .one p {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-}
+}*//*
 }
 
-@media only screen and (min-width : 640px) and (max-width : 640px) {
+@media only screen and (min-width : 480px) and (max-width : 480px) {
   header {
     position: relative;
-    min-height: 384px;
+    min-height: 320px;
     text-align: center;
     color: #fff;
     width: 100%;
@@ -228,22 +342,24 @@ header .picture .one p {
 .fancy {
 	font-family: "Montez";
 	text-transform: none;
-	font-size: 2.5em;
-	padding-top: 2%;
-}
+	font-size: 2em;*/
+/*	padding-top: 3%;*/
+/*}
 .fancy{
-	margin-top: -50px;
-}
+	margin-top: 10%;
+}*/
 
-.smaller {
+/*.smaller {
 	text-transform: none;
-	padding-bottom: 50%;
+	font-size: .9em;
+/*	padding-bottom: 5%;*/
 
-}
-}
+/*}
+}*/
+
 
 /* Smartphone (Nexus 6) */
-@media only screen and (min-width : 412px) and (max-width : 412px) {
+/*@media only screen and (min-width : 412px) and (max-width : 412px) {
   header {
     position: relative;
     min-height: 732px;
@@ -288,17 +404,82 @@ header .picture .one p {
 	padding-bottom: 5%;
 
 }
+}*/
+
+/* iPad (Mini) */
+/* Portrait*/
+/*@media only screen and (min-width : 768px) and (max-width : 768px) {
+  header {
+    position: relative;
+    min-height: 1024px;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    background-image: url('../assets/cell-image.jpg');
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
+.fancy {
+	font-family: "Montez";
+	text-transform: none;
+	font-size: 4.5em;
+	padding-top: 3%;
+}
+.fancy{
+	margin-top: -300px;
+}
+
+.smaller {
+	text-transform: none;
+	font-size: 1.7em;
+	padding-bottom: 5%;
+
+}
+}
+/*landscape*/
+@media only screen and (min-width : 1024px) and (max-width : 1024px) {
+  header {
+    position: relative;
+    min-height: 768px;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    background-image: url('../assets/full-image1.jpg');
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+.fancy {
+	font-family: "Montez";
+	text-transform: none;
+	font-size: 3em;
+	padding-top: 3%;
+}
+.fancy{
+	margin-top: -20px;
+}
+
+.smaller {
+	text-transform: none;
+	padding-bottom: 5%;
+
+}
+}*/
 /* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) {
+/*@media only screen and (min-width : 321px) {
 header{
 	position: relative;
 	padding-top: 100px;
 }
-}
+}*/
 
 /* Smartphones (portrait) ----------- */
-@media only screen and (min-width : 600px) and (max-width : 600px) {
+/*@media only screen and (min-width : 600px) and (max-width : 600px) {
   header {
     position: relative;
     min-height: 960px;
@@ -313,7 +494,7 @@ header{
     -o-background-size: cover;
 }
 }
-
+*/
 /* iPads (portrait and landscape) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
 /* Styles */
@@ -326,20 +507,7 @@ header{
 
 /* iPads (portrait) ----------- */
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-  header {
-    position: relative;
-    min-height: 1000px;
-    text-align: center;
-    color: #fff;
-    width: 100%;
-    background-image: url('../assets/cell-image.jpg');
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-}
+
 /**********
 iPad 3
 **********/
@@ -421,7 +589,7 @@ iPad 3
 
 @media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3){
 /* Styles */
-}
+}*/
 
 
 
