--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -94,10 +94,10 @@ header .picture .one p {
 
 /***** General Responsive Design *****/
 
-@media(min-width : 260px) and (max-width : 769px) {
+@media(min-width : 20px) and (max-width : 767px) {
 	header {
     position: relative;
-    min-height: 800px;
+    min-height: 100%;
     text-align: center;
     color: #fff;
     width: 100%;
