--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -108,6 +108,12 @@ header .picture .one p {
     background-size: cover;
     -o-background-size: cover;
 }
+    header .fancy {
+    	margin: -20%;
+    }
+    header .smaller{
+    	margin: 21%;
+    }
 header .picture {
         position: absolute;
         top: 50%;
@@ -1287,255 +1293,3 @@ header .picture {
 	padding-bottom: 5%;
 }
 }
-
-
-
-
-
-
-
-
-/* Smartphone (Galaxy Note II) 
-/*@media screen and (device-width : 360px) and (device-height : 640px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait) {
-  header {
-    position: relative;
-    min-height: 640px;
-    text-align: center;
-    color: #fff;
-    width: 100%;
-    background-image: url('../assets/cell-image2.jpg');
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-.fancy {
-	font-family: "Montez";
-	text-transform: none;
-	font-size: 2em;
-}
-.smaller{
-	font-size: 1.05em;
-}
-}
-
-@media screen and (device-height : 360px) and (device-width : 640px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape) {
-  header {
-    position: relative;
-    min-height: 360px;
-    text-align: center;
-    color: #fff;
-    width: 100%;
-    background-image: url('../assets/cell-image2.jpg');
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-.fancy {
-	font-family: "Montez";
-	text-transform: none;
-	font-size: 2em;
-}
-.smaller{
-	font-size: 1.05em;
-}
-
-
-
-
-
-/* iPad (Mini) 
-/* Portrait*/
-/*@media only screen and (min-width : 768px) and (max-width : 768px) {
-  header {
-    position: relative;
-    min-height: 1024px;
-    text-align: center;
-    color: #fff;
-    width: 100%;
-    background-image: url('../assets/cell-image.jpg');
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-.fancy {
-	font-family: "Montez";
-	text-transform: none;
-	font-size: 4.5em;
-	padding-top: 3%;
-}
-.fancy{
-	margin-top: -300px;
-}
-
-.smaller {
-	text-transform: none;
-	font-size: 1.7em;
-	padding-bottom: 5%;
-
-}
-}
-/*landscape*/
-/*@media only screen and (min-width : 1024px) and (max-width : 1024px) {
-  header {
-    position: relative;
-    min-height: 768px;
-    text-align: center;
-    color: #fff;
-    width: 100%;
-    background-image: url('../assets/full-image1.jpg');
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-.fancy {
-	font-family: "Montez";
-	text-transform: none;
-	font-size: 3em;
-	padding-top: 3%;
-}
-.fancy{
-	margin-top: -20px;
-}
-
-.smaller {
-	text-transform: none;
-	padding-bottom: 5%;
-
-}
-}*/
-/* Smartphones (landscape) ----------- */
-/*@media only screen and (min-width : 321px) {
-header{
-	position: relative;
-	padding-top: 100px;
-}
-}*/
-
-/* Smartphones (portrait) ----------- */
-/*@media only screen and (min-width : 600px) and (max-width : 600px) {
-  header {
-    position: relative;
-    min-height: 960px;
-    text-align: center;
-    color: #fff;
-    width: 100%;
-    background-image: url('../assets/cell-image1.jpg');
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-}
-*/
-/* iPads (portrait and landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
-/* Styles */
-}
-
-/* iPads (landscape) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
-
-}
-
-/* iPads (portrait) ----------- */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-
-/**********
-iPad 3
-**********/
-@media only screen and (min-device-width : 1024px) and (max-device-width : 1366px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
-/* Styles */
-}
-
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
-/* Styles */
-}
-/* Desktops and laptops ----------- */
-@media only screen  and (min-width : 1224px) {
-/* Styles */
-}
-
-/* Large screens ----------- */
-@media only screen  and (min-width : 1824px) {
-/* Styles */
-}
-
-/* iPhone 4 ----------- */
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : landscape) and (-webkit-min-device-pixel-ratio : 2) {
-/* Styles */
-}
-
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
-/* Styles */
-}
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2){
-/* Styles */
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
-/* Styles */
-}
-
-/* iPhone 6 ----------- */
-@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2){
-/* Styles */
-}
-
-@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
-/* Styles */
-}
-
-/* iPhone 6+ ----------- */
-@media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2){
-/* Styles */
-}
-
-@media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
-/* Styles */
-}
-
-/* Samsung Galaxy S3 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 2){
-/* Styles */
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
-/* Styles */
-}
-
-/* Samsung Galaxy S4 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
-/* Styles */
-}
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3){
-/* Styles */
-}
-
-/* Samsung Galaxy S5 ----------- */
-@media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation : landscape) and (-webkit-device-pixel-ratio: 3){
-/* Styles */
-}
-
-@media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 3){
-/* Styles */
-}*/
-
-
-
-
-
-
-
-
