--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -92,65 +92,6 @@ header .picture .one p {
 }
 
 
-/***** General Responsive Design *****/
-
-@media(min-width : 20px) and (max-width : 767px) {
-	header {
-    position: relative;
-    min-height: 100%;
-    text-align: center;
-    color: #fff;
-    width: 100%;
-    background-image: url('../assets/cell-image2.jpg');
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-    header .fancy {
-    	margin: -20%;
-    }
-    header .smaller{
-    	margin: 21%;
-    }
-header .picture {
-        position: absolute;
-        top: 50%;
-        padding: 0 50px;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-    }
-}
-
-@media(min-width:768px) {
-    header {
-        min-height: 100%;
-    }
-    header .picture {
-        position: absolute;
-        top: 50%;
-        padding: 0 50px;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-    }
-    header .picture .one {
-        margin-right: auto;
-        margin-left: auto;
-        max-width: 1000px;
-    }
-    header .picture .one h1 {
-        font-size: 53px;
-    }
-    header .picture .one p {
-        margin-right: auto;
-        margin-left: auto;
-        max-width: 80%;
-        font-size: 18px;
-    }
-}
 
 /* NEXUS (portrait and landscape) ----------- */
 /* Smartphone (Nexus 4) */
@@ -415,7 +356,7 @@ header .picture {
     text-align: center;
     color: #fff;
     width: 100%;
-    background-image: url('../assets/full-image2.jpg');
+    background-image: url('../assets/cell-image2.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -446,7 +387,7 @@ header .picture {
     text-align: center;
     color: #fff;
     width: 100%;
-    background-image: url('../assets/full-image2.jpg');
+    background-image: url('../assets/cell-image2.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -479,7 +420,7 @@ header .picture {
     text-align: center;
     color: #fff;
     width: 100%;
-    background-image: url('../assets/full-image2.jpg');
+    background-image: url('../assets/cell-image2.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -493,7 +434,7 @@ header .picture {
 	padding-top: 3%;
 }
 .fancy{
-	margin-top: 230px;
+	/*margin-top: 230px;*/
 }
 
 .smaller {
@@ -510,7 +451,7 @@ header .picture {
     text-align: center;
     color: #fff;
     width: 100%;
-    background-image: url('../assets/full-image2.jpg');
+    background-image: url('../assets/cell-image2.jpg');
     background-position: center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -683,7 +624,7 @@ header .picture {
 	padding-top: 3%;
 }
 .fancy{
-	margin-top: -125px;
+	margin-top: 250px;
 }
 
 .smaller {
@@ -692,12 +633,12 @@ header .picture {
 
 }
 }
-/*
+
 @media screen and (device-width : 1024px) and (device-height : 768px) {
-*/  /***********DEFAULT*******/
-  /*header {
+/***********DEFAULT*******/
+  header {
     position: relative;
-    min-height: 414px;
+    min-height: 768px;
     text-align: center;
     color: #fff;
     width: 100%;
@@ -721,9 +662,9 @@ header .picture {
 .smaller {
 	text-transform: none;
 	font-size: 1.1em;
-	/*padding-bottom: 5%;*/
-/*}*/
-/*}*/
+	padding-bottom: 5%;
+}
+}
 
 /* iPad (iPad Pro) */
 @media screen and (device-width : 1024px) and (device-height: 1366px) {
@@ -1292,4 +1233,79 @@ header .picture {
 	font-size: .95em;
 	padding-bottom: 5%;
 }
+}
+
+/***** General Responsive Design *****/
+
+@media (min-width : 20px) and (max-width : 766px) {
+	header {
+    position: relative;
+    min-height: 100%;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    background-image: url('../assets/cell-image2.jpg');
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+}
+    /*header .fancy {
+    	margin: -20%;
+    }
+    header .smaller{
+    	margin: 21%;
+    }
+	header .picture {
+	    position: absolute;
+	    top: 50%;
+	    padding: 0 50px;
+	    -webkit-transform: translateY(-50%);
+	    -ms-transform: translateY(-50%);
+	    transform: translateY(-50%);
+    }
+    header .picture .one {
+	    margin-right: auto;
+	    margin-left: auto;
+	    max-width: 1000px;
+    }
+    header .picture .one h1 {
+        font-size: 53px;
+    }
+    header .picture .one p {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 80%;
+        font-size: 18px;
+    }
+}*/
+
+@media(min-width:788px) {
+    header {
+        min-height: 100%;
+    }
+    header .picture {
+        position: absolute;
+        top: 50%;
+        padding: 0 50px;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+    }
+    header .picture .one {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 1000px;
+    }
+    header .picture .one h1 {
+        font-size: 53px;
+    }
+    header .picture .one p {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 80%;
+        font-size: 18px;
+    }
 }
