fixed sizing issues with cell media queries

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -90,7 +90,101 @@ header .picture .one p {
 	font-family: "Kaushan Script", Arial;
 }
 
+/***** General Responsive Design *****/
 
+@media (min-width : 20px) and (max-width : 766px) {
+	header {
+    position: relative;
+    min-height: 100%;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    background-image: url('../assets/cell-image2.jpg');
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+}
+    /*header .fancy {
+    	margin: -20%;
+    }
+    header .smaller{
+    	margin: 21%;
+    }
+	header .picture {
+	    position: absolute;
+	    top: 50%;
+	    padding: 0 50px;
+	    -webkit-transform: translateY(-50%);
+	    -ms-transform: translateY(-50%);
+	    transform: translateY(-50%);
+    }
+    header .picture .one {
+	    margin-right: auto;
+	    margin-left: auto;
+	    max-width: 1000px;
+    }
+    header .picture .one h1 {
+        font-size: 53px;
+    }
+    header .picture .one p {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 80%;
+        font-size: 18px;
+    }
+}*/
+
+@media(min-width:767px) {
+header {
+    position: relative;
+    min-height: 100%;
+    text-align: center;
+    color: #fff;
+    width: 100%;
+    background-image: url('../assets/full-image1.jpg');
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+	.fancy{
+	margin-top: 200px;
+	font-size: 3em;
+}
+.smaller {
+	text-transform: none;
+
+/*	padding-bottom: 20%;*/
+}
+}
+/*    header {
+        min-height: 100%;
+    }*/
+/*    header .picture {
+        position: absolute;
+        top: 50%;
+        padding: 0 50px;
+        -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);*/
+    /*}*/
+/*    header .picture .one {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 1000px;*/
+   /* }*/
+    
+/*    header .picture .one p {
+        margin-right: auto;
+        margin-left: auto;
+        max-width: 80%;
+        font-size: 18px;*/
+/*    }
+}*/
 
 /* NEXUS (portrait and landscape) ----------- */
 /* Smartphone (Nexus 4) */
@@ -1234,77 +1328,3 @@ header .picture .one p {
 }
 }
 
-/***** General Responsive Design *****/
-
-@media (min-width : 20px) and (max-width : 766px) {
-	header {
-    position: relative;
-    min-height: 100%;
-    text-align: center;
-    color: #fff;
-    width: 100%;
-    background-image: url('../assets/cell-image2.jpg');
-    background-position: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
-}
-}
-    /*header .fancy {
-    	margin: -20%;
-    }
-    header .smaller{
-    	margin: 21%;
-    }
-	header .picture {
-	    position: absolute;
-	    top: 50%;
-	    padding: 0 50px;
-	    -webkit-transform: translateY(-50%);
-	    -ms-transform: translateY(-50%);
-	    transform: translateY(-50%);
-    }
-    header .picture .one {
-	    margin-right: auto;
-	    margin-left: auto;
-	    max-width: 1000px;
-    }
-    header .picture .one h1 {
-        font-size: 53px;
-    }
-    header .picture .one p {
-        margin-right: auto;
-        margin-left: auto;
-        max-width: 80%;
-        font-size: 18px;
-    }
-}*/
-
-@media(min-width:767px) {
-    header {
-        min-height: 100%;
-    }
-    header .picture {
-        position: absolute;
-        top: 50%;
-        padding: 0 50px;
-        -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
-    }
-    header .picture .one {
-        margin-right: auto;
-        margin-left: auto;
-        max-width: 1000px;
-    }
-    header .picture .one h1 {
-        font-size: 53px;
-    }
-    header .picture .one p {
-        margin-right: auto;
-        margin-left: auto;
-        max-width: 80%;
-        font-size: 18px;
-    }
-}
